[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/TestScene/TestScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlayerPaddle/PlayerPaddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PaddleAI/PaddleAI.tscn" type="PackedScene" id=5]

[node name="TestScene" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 150, 97 )

[node name="CountdownTimer" type="Timer" parent="."]
one_shot = true

[node name="PaddleAI" parent="." instance=ExtResource( 5 )]

[node name="PlayerPaddle" parent="." instance=ExtResource( 4 )]

[node name="PauseResumeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="timeout" from="PauseResumeTimer" to="." method="_on_PauseResumeTimer_timeout"]
